--- a/mobile/blen_redwan/ecommerce_app/pubspec.yaml
+++ b/mobile/blen_redwan/ecommerce_app/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  jwt_decoder: ^2.0.1
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   http: ^1.2.2
