--- a/mobile/blen_redwan/ecommerce_app/pubspec.yaml
+++ b/mobile/blen_redwan/ecommerce_app/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^1.1.0
+  image_picker: ^0.8.7+5
   shared_preferences: ^2.2.2
   internet_connection_checker: ^3.0.1
   flutter:
